test/corpus/expr.txt
================================================================================
binary expression
================================================================================

1 ** 2 + 2 * 3

--------------------------------------------------------------------------------

(module
  (binary_operator
    (binary_operator
      (integer)
      (integer))
    (binary_operator
      (integer)
      (integer))))

================================================================================
unary expression
================================================================================

~1

--------------------------------------------------------------------------------

(module
  (unary_operator
    (integer)))

================================================================================
slice expression
================================================================================

"abc"[1:2]

--------------------------------------------------------------------------------

(module
  (subscript
    (string
      (string_start)
      (string_content)
      (string_end))
    (slice
      (integer)
      (integer))))

================================================================================
conditional expression
================================================================================

x = True if enabled else False

--------------------------------------------------------------------------------

(module
  (assignment
    (dotted_name
      (identifier))
    (conditional_expression
      (true)
      (identifier)
      (false))))